# ferritin

./: .gitignore  .gitmodules  ARCHITECTURE.md  Cargo.toml  README.md  release-plz.toml
ferretin/: Cargo.toml
ferretin/src/: color_scheme.rs  commands.rs  format_context.rs  generate_docsrs_url.rs  main.rs  markdown.rs  request.rs  styled_string.rs  tests.rs  verbosity.rs
ferretin/src/commands/: get.rs  list.rs  search.rs
ferretin/src/format/: documentation.rs  enum.rs  functions.rs  impls.rs  items.rs  mod.rs  module.rs  source.rs  struct.rs  trait.rs  types.rs
ferretin/src/renderer/: mod.rs  plain.rs  test_mode.rs  tty.rs
ferretin/src/snapshots/: ferretin__tests__fuzzy_matching_suggestions.snap  ferretin__tests__fuzzy_matching_trait_methods.snap  ferretin__tests__fuzzy_matching_typo.snap  ferretin__tests__get_crate_root_plain_mode.snap  ferretin__tests__get_crate_root_test_mode.snap  ferretin__tests__get_crate_root_tty_mode.snap  ferretin__tests__get_enum_details.snap  ferretin__tests__get_generic_enum.snap  ferretin__tests__get_item_with_normalized_crate_name.snap  ferretin__tests__get_struct_details.snap  ferretin__tests__get_struct_with_source.snap  ferretin__tests__get_submodule.snap  ferretin__tests__list_crates.snap  ferretin__tests__nonexistent_item.snap  ferretin__tests__recursive_module_listing.snap  ferretin__tests__recursive_submodule_listing.snap  ferretin__tests__search.snap  ferretin__tests__search_2.snap
ferritin/: CHANGELOG.md  Cargo.toml  build.rs
ferritin-common/: CHANGELOG.md  Cargo.toml
ferritin-common/src/: doc_ref.rs  iterators.rs  lib.rs  navigator.rs
ferritin-common/src/conversions/: mod.rs  v55.rs  v56.rs
ferritin-common/src/search/: indexer.rs
ferritin-common/src/sources/: docsrs.rs  local.rs  std.rs
ferritin/src/: color_scheme.rs  commands.rs  document.rs  format_context.rs  generate_docsrs_url.rs  logging.rs  main.rs  markdown.rs  render_context.rs  request.rs  styled_string.rs  tests.rs
ferritin/src/commands/: get.rs  list.rs  search.rs
ferritin/src/format/: documentation.rs  enum.rs  functions.rs  impls.rs  items.rs  mod.rs  module.rs  source.rs  struct.rs  trait.rs  types.rs
ferritin/src/renderer/: mod.rs  plain.rs  test_mode.rs  tty.rs
ferritin/src/snapshots/: ferritin__tests__fuzzy_matching_suggestions_interactive_mode.snap  ferritin__tests__fuzzy_matching_suggestions_plain_mode.snap  ferritin__tests__fuzzy_matching_suggestions_test_mode.snap  ferritin__tests__fuzzy_matching_suggestions_tty_mode.snap  ferritin__tests__fuzzy_matching_trait_methods_interactive_mode.snap  ferritin__tests__fuzzy_matching_trait_methods_plain_mode.snap  ferritin__tests__fuzzy_matching_trait_methods_test_mode.snap  ferritin__tests__fuzzy_matching_trait_methods_tty_mode.snap  ferritin__tests__fuzzy_matching_typo_interactive_mode.snap  ferritin__tests__fuzzy_matching_typo_plain_mode.snap  ferritin__tests__fuzzy_matching_typo_test_mode.snap  ferritin__tests__fuzzy_matching_typo_tty_mode.snap  ferritin__tests__get_crate_root_interactive_mode.snap  ferritin__tests__get_crate_root_plain_mode.snap  ferritin__tests__get_crate_root_test_mode.snap  ferritin__tests__get_crate_root_tty_mode.snap  ferritin__tests__get_enum_details_interactive_mode.snap  ferritin__tests__get_enum_details_plain_mode.snap  ferritin__tests__get_enum_details_test_mode.snap  ferritin__tests__get_enum_details_tty_mode.snap  ferritin__tests__get_generic_enum_interactive_mode.snap  ferritin__tests__get_generic_enum_plain_mode.snap  ferritin__tests__get_generic_enum_test_mode.snap  ferritin__tests__get_generic_enum_tty_mode.snap  ferritin__tests__get_item_with_normalized_crate_name.snap  ferritin__tests__get_item_with_normalized_crate_name_interactive_mode.snap  ferritin__tests__get_item_with_normalized_crate_name_plain_mode.snap  ferritin__tests__get_item_with_normalized_crate_name_test_mode.snap  ferritin__tests__get_item_with_normalized_crate_name_tty_mode.snap  ferritin__tests__get_markdown_test_interactive_mode.snap  ferritin__tests__get_markdown_test_plain_mode.snap  ferritin__tests__get_markdown_test_test_mode.snap  ferritin__tests__get_markdown_test_tty_mode.snap  ferritin__tests__get_std_interactive_mode.snap  ferritin__tests__get_std_plain_mode.snap  ferritin__tests__get_std_test_mode.snap  ferritin__tests__get_std_tty_mode.snap  ferritin__tests__get_struct_details.snap  ferritin__tests__get_struct_details_interactive_mode.snap  ferritin__tests__get_struct_details_plain_mode.snap  (+36 more)
ferritin/src/web/: handlers.rs  json_document.rs  mod.rs  server.rs  transform.rs
rustdoc-core/: Cargo.toml
rustdoc-core/src/: crate_name.rs  doc_ref.rs  iterators.rs  lib.rs  navigator.rs  project.rs
rustdoc-core/src/intra_doc_links/: tests.rs
rustdoc-core/src/search/: indexer.rs
rustdoc-mcp/: CHANGELOG.md  Cargo.toml  README.md
rustdoc-mcp/src/: filter.rs  main.rs  request.rs  state.rs  tests.rs  verbosity.rs  workspace_tests.rs
rustdoc-mcp/src/formatting/: enum.rs  impls.rs  mod.rs
rustdoc-mcp/src/snapshots/: rustdoc_mcp__tests__get_crate_root.snap  rustdoc_mcp__tests__get_enum_details.snap  rustdoc_mcp__tests__get_generic_enum.snap  rustdoc_mcp__tests__get_generic_struct.snap  rustdoc_mcp__tests__get_std_vec-2.snap  rustdoc_mcp__tests__get_std_vec-3.snap  rustdoc_mcp__tests__get_std_vec.snap  rustdoc_mcp__tests__get_struct_details.snap  rustdoc_mcp__tests__get_struct_with_source.snap  rustdoc_mcp__tests__get_submodule.snap  rustdoc_mcp__tests__get_tuple_struct.snap  rustdoc_mcp__tests__get_unit_struct.snap  rustdoc_mcp__tests__list_crates.snap  rustdoc_mcp__tests__nonexistent_item.snap  rustdoc_mcp__tests__recursive_filtering.snap  rustdoc_mcp__tests__recursive_module_listing.snap  rustdoc_mcp__tests__recursive_multiple_filters.snap  rustdoc_mcp__tests__recursive_submodule_listing.snap  rustdoc_mcp__tests__search.snap  rustdoc_mcp__tests__search_2.snap  rustdoc_mcp__tests__verbosity_minimal.snap  rustdoc_mcp__workspace_tests__subcrate_b_scoped_dependencies.snap  rustdoc_mcp__workspace_tests__workspace_access_dependency.snap  (+3 more)
rustdoc-mcp/src/tools/: get_item.rs  search.rs
(+72 files in other folders)
