[workspace]
resolver = "2"
members = ["rustdoc-core", "rustdoc-mcp"]
exclude = [
    "rustdoc-mcp/tests/test-crate",
    "rustdoc-mcp/tests/test-workspace",
]

[workspace.package]
version = "0.1.4"
edition = "2024"
readme = "README.md"
repository = "https://github.com/jbr/rustdoc-mcp"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.100"
cargo_metadata = "0.23.1"
cargo_toml = "0.22.3"
elsa = "1.11.2"
rustc-hash = { version = "2.1.1", features = ["nightly"] }
rustdoc-types = { version = "0.57.0", features = ["rustc-hash"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shellexpand = "3.1.1"
strsim = "0.11.1"
walkdir = "2.5.0"
