[package]
name = "ferritin-common"
version = "0.2.0"
edition.workspace = true
description = "library for rustdoc navigation and search"
readme = "README.md"
repository.workspace = true
license.workspace = true

[dependencies]
trillium-rustls = { version = "0.9.0", features = ["client"] }
trillium-smol = "0.4.2"
anyhow.workspace = true
cargo_metadata.workspace = true
cargo_toml.workspace = true
elsa.workspace = true
fieldwork = "0.4.6"
log = "0.4.29"
rkyv = "0.8.14"
rustc-hash.workspace = true
rustdoc-types.workspace = true
rustdoc-types-56 = { package = "rustdoc-types", version = "0.57" }
rustdoc-types-55 = { package = "rustdoc-types", version = "0.55" }
serde.workspace = true
serde_json.workspace = true
shellexpand.workspace = true
strsim.workspace = true
trillium-client = "0.6.2"
walkdir.workspace = true
zstd = "0.13"
home = "0.5.12"
async-fs = "2.2.0"
semver = { version = "1.0.27", features = ["serde"] }

[dev-dependencies]
env_logger = "0.11.8"
