[package]
name = "ferritin"
version = "0.3.0"
edition.workspace = true
description = "Human-friendly CLI for browsing Rust documentation"
readme = "../README.md"
repository.workspace = true
license.workspace = true
include = [
    "src/**/*",
    "build.rs",
    "assets/**/*.tmTheme",
    "CHANGELOG.md",
]

[[bin]]
name = "ferritin"
path = "src/main.rs"

[dependencies]
ferritin-common = { path = "../ferritin-common", version = "0.3.0" }

anyhow.workspace = true
clap = { version = "4.5.57", features = ["derive", "cargo", "env"] }
crossbeam-channel = "0.5"
crossterm = "0.29"
fieldwork = "0.4.6"
log = "0.4.29"
rayon = "1.11"
env_logger = "0.11.8"
pulldown-cmark = "0.13"
ratatui = "0.30"
regex = "1.12"
rustdoc-types.workspace = true
syntect = { version = "5.3", default-features = false, features = ["parsing", "default-syntaxes", "html", "plist-load", "yaml-load", "dump-load", "dump-create", "regex-onig"] }
terminal_size = "0.4"
thiserror = "2"
unicode-width = "0.2.2"
webbrowser = "1.1.0"
semver = "1.0.27"
percent-encoding = "2.3"
mimalloc = "0.1.48"

[build-dependencies]
syntect = { version = "5.3", default-features = false, features = ["parsing", "plist-load", "dump-load", "dump-create", "regex-onig"] }

[dev-dependencies]
insta = { version = "1.46.3", features = ["filters"] }
paste = "1.0.15"
strip-ansi-escapes = "0.2.1"
