[package]
name = "rustdoc-mcp"
version.workspace = true
edition.workspace = true
description = "mcp server for rustdocs"
readme.workspace = true
repository.workspace = true
documentation = "https://docs.rs/rustdoc-mcp"
license.workspace = true
keywords = ["mcp"]
categories = []

[dependencies]
rustdoc-core = { path = "../rustdoc-core" }

anyhow.workspace = true
clap = { version = "4.5.54", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.8"
fieldwork = "0.4.6"
log = "0.4.29"
mcplease = "0.2.3"
rustdoc-types.workspace = true
schemars = { version = "1.2.0", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
shellexpand.workspace = true
strum = { version = "0.27.2", features = ["derive"] }

[dev-dependencies]
tempfile = "3.24.0"
insta = { version = "1.46", features = ["yaml"] }
