[package]
name = "rustdoc-mcp"
version = "0.6.0"
edition.workspace = true
description = "mcp server for rustdocs"
readme = "./README.md"
repository.workspace = true
documentation = "https://docs.rs/rustdoc-mcp"
license.workspace = true
keywords = ["mcp"]
categories = []

[dependencies]
ferritin-common = { path = "../ferritin-common", version = "0.7.0" }
anyhow.workspace = true
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.9"
fieldwork = "0.4.8"
log = "0.4.29"
mcplease = "0.2.3"
rustdoc-types.workspace = true
schemars = { version = "1.2.1", features = ["derive"] }
serde.workspace = true
shellexpand.workspace = true
strum = { version = "0.28.0", features = ["derive"] }
semver = "1.0.27"

[dev-dependencies]
tempfile = "3.26.0"
insta = { version = "1.46", features = ["yaml", "filters"] }
